--- a/site/themes/hugo-strata-theme/exampleSite/config.toml
+++ b/site/themes/hugo-strata-theme/exampleSite/config.toml
@@ -1,4 +1,4 @@
-baseurl = "/"
+baseurl = "https://example.org/"
 languageCode = "en-us"
 title = "Strata"
 theme = "hugo-strata-theme"
@@ -30,6 +30,7 @@ paginate = 10
 		# The icons will be shown if you enter your username
 		twitter = "spf13"
 		github = "spf13"
+		gitlab = "spf13"
 		dribbble = ""
 		facebook = ""
 		googleplus = ""
@@ -37,7 +38,7 @@ paginate = 10
 		linkedin = ""
 
 		copyright = [
-			"&copy; PT",
+			"&copy; John Doe",
 			"Design: [HTML5 UP](//html5up.net)",
 			"Demo Images: [Unsplash](//unsplash.com/)"
 		]
@@ -91,6 +92,9 @@ paginate = 10
 			title = "Lorem ipsum dolor."
 			description = "Lorem ipsum dolor sit amet."
 
+	[params.recentposts]
+		hide  = false
+		title = "Recent blog posts"
 
 	[params.contact]
 		hide  = false
