--- a/site/config.toml
+++ b/site/config.toml
@@ -1,5 +1,5 @@
 baseurl = "/"
-languageCode = "en-us"
+languageCode = "pl"
 title = "Strata"
 theme = "hugo-strata-theme"
 disqusShortname = "spf13"
@@ -28,8 +28,8 @@ paginate = 10
 		# Use Markdown to format the string. This works nearly all over the theme
 		bio = "**I'm Strata**, a super simple<br> responsive site template freebie<br> crafted by [HTML5 UP](//html5up.net)."
 		# The icons will be shown if you enter your username
-		twitter = "spf13"
-		github = "spf13"
+		twitter = ""
+		github = ""
 		dribbble = ""
 		facebook = ""
 		googleplus = ""
@@ -115,24 +115,24 @@ paginate = 10
 	    # - send a dummy email yourself to confirm your account
 	    # - click the confirm link in the email from www.formspree.io
 	    # - you're done. Happy mailing!
-		email = "hello@example.com"
+		email = "paweltar@gmail.com"
 
 		[params.contact.form]
 			# Set custom strings for the form if your native
 			# language isn't English
-			name = "Name"
+			name = "Imię"
 			email = "Email"
-			message = "Message"
-			submit = "Send message"
+			message = "Wiadomość"
+			submit = "Wyślij wiadomość"
 
 
 # Menu links that appear on the left sidebar
 [[menu.main]]
-	name = "Home"
+	name = "Dojazd"
 	url  = "/"
 	weight = 0
 
 [[menu.main]]
-	name = "Blog"
+	name = "O nas"
 	url  = "post/"
 	weight = 10
